--- a/index.html
+++ b/index.html
@@ -1,36 +1,46 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trịnh Bá Lâm - Sales & Business Development Expert</title>
-    <meta name="description" content="Portfolio of Trịnh Bá Lâm - Sales & Business Development Expert with 8+ years of experience in market expansion and strategic partnerships." />
-    <meta name="author" content="Trịnh Bá Lâm" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:title" content="Trịnh Bá Lâm - Sales & Business Development Expert" />
-    <meta property="og:description" content="Portfolio of Trịnh Bá Lâm - Sales & Business Development Expert with 8+ years of experience in market expansion and strategic partnerships." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://trinhbalam.id.vn/" />
-    <meta property="og:image" content="https://trinhbalam.id.vn/profile.jpg" />
-    <meta property="og:site_name" content="Trịnh Bá Lâm Portfolio" />
-    <meta property="og:locale" content="vi_VN" />
+  <title>Tran Bao Ngoc – Executive Assistant & International Relations Specialist</title>
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Trịnh Bá Lâm - Sales & Business Development Expert" />
-    <meta name="twitter:description" content="Portfolio of Trịnh Bá Lâm - Sales & Business Development Expert" />
-    <meta name="twitter:image" content="https://trinhbalam.id.vn/profile.jpg" />
-    
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://trinhbalam.id.vn/" />
-    
-    <!-- Additional SEO tags -->
-    <meta name="geo.region" content="VN" />
-    <meta name="geo.placename" content="Vietnam" />
-    <meta name="language" content="Vietnamese" />
-  </head>
+  <meta name="description"
+    content="Official portfolio of Tran Bao Ngoc — Executive Assistant, International Relations Specialist, and Interpreter supporting Boards, international partners, and youth empowerment initiatives." />
+
+  <meta name="author" content="Tran Bao Ngoc" />
+
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+  <!-- OpenGraph -->
+  <meta property="og:title" content="Tran Bao Ngoc – Executive Assistant & International Relations Specialist" />
+  <meta property="og:description"
+    content="Portfolio of Tran Bao Ngoc — Executive Assistant, Interpreter, and International Relations Specialist supporting leadership teams and global partners." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://trinhbalam.id.vn/" />
+  <meta property="og:image" content="https://trinhbalam.id.vn/profile.jpg" />
+  <meta property="og:site_name" content="Tran Bao Ngoc Portfolio" />
+  <meta property="og:locale" content="vi_VN" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Tran Bao Ngoc – Executive Assistant & International Relations" />
+  <meta name="twitter:description"
+    content="Portfolio of Tran Bao Ngoc — Board Support, International Relations, Interpreter, Youth Empowerment." />
+  <meta name="twitter:image" content="https://trinhbalam.id.vn/profile.jpg" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://trinhbalam.id.vn/" />
+
+  <!-- Additional SEO -->
+  <meta name="geo.region" content="VN" />
+  <meta name="geo.placename" content="Vietnam" />
+  <meta name="language" content="Vietnamese" />
+</head>
 
   <body>
     <div id="root"></div>
